hphp/hack/test/typecheck/reified_generics/valid_targ_tpenv_bounds_test3.php.exp
File "valid_targ_tpenv_bounds_test3.php", line 8, characters 21-22:
Tf is not reified, it cannot be used as a reified type argument (Typing[4305])
  File "valid_targ_tpenv_bounds_test3.php", line 6, characters 18-19:
  Tc is reified
File "valid_targ_tpenv_bounds_test3.php", line 7, characters 39-40:
Tf is not reified, it cannot be used as a reified type argument (Typing[4305])
  File "valid_targ_tpenv_bounds_test3.php", line 6, characters 18-19:
  Tc is reified
